Added comments and cleaned things up

--- a/js/vtkjs.html
+++ b/js/vtkjs.html
@@ -17,6 +17,7 @@
             <button id="remove-first">Remove First Node</button>
             <button id="reset-camera">Reset Camera</button>
         </div>
+        <!-- This needs to be in the body it doesn't work if placed in the head-->
         <script defer="defer" type="text/javascript" src="vtkjs.js"></script>
     </body>
 </html>
